@@ -343,6 +343,7 @@ Version CVS HEAD (?)
       RT context.
     - ASIO driver: removed compiler warnings
     - CoreAudio: fixed minor error handling bug
+    - ASIO driver: be more verbose when no ASIO card could be found (fixes #203)
 
   * LSCP server:
     - added support for sending MIDI CC messages via LSCP command
@@ -425,6 +426,8 @@ Version CVS HEAD (?)
       (labelled "Disk stream not available in time")
     - Update effects on sample rate & period size changes (to avoid
       crashes and noise on such transitions).
+    - ignore missing LADSPA paths without ignoring valid LADSPA paths
+      (fixes #208)
 
 Version 1.0.0 (31 July 2009)
 
@@ -489,6 +492,7 @@ Version 1.0.0 (31 July 2009)
     - Windows: add the installation directory to the DLL search path
       when loading an editor plugin (solves problems with VST and
       gigedit on systems with other GTK versions installed)
+    - updated linuxsampler man page
 
   * audio driver:
     - removed the nonsense audio channel constraint (which was hard coded to
